nodered/k8s/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodered
  labels:
    app.kubernetes.io/name: nodered
    app.kubernetes.io/instance: nodered-app
    app.kubernetes.io/version: "4.1.1-20"
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: nodered
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nodered
      app.kubernetes.io/name: nodered
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nodered
        app.kubernetes.io/name: nodered
    spec:
      containers:
      - name: nodered
        image: nodered/node-red:4.1.1-20
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 1880
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 1880
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 1880
          initialDelaySeconds: 15
          periodSeconds: 10
        volumeMounts:
        - name: nodered-storage
          mountPath: /data
      volumes:
      - name: nodered-storage
        persistentVolumeClaim:
          claimName: nodered-pvc
          readOnly: false
